--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Comfy Sloth Starter</title>
+    <link href="https://api.fontshare.com/v2/css?f[]=plus-jakarta-sans@400,700&f[]=zodiak@700&display=swap" rel="stylesheet">
+    <title>TechStore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
